[gd_scene load_steps=2 format=3 uid="uid://br4bnyjsprbin"]

[ext_resource type="Script" uid="uid://ke4cs1h8c1s7" path="res://scenes/control.gd" id="1_wen4y"]

[node name="Test" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wen4y")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 782.0
offset_top = 54.0
offset_right = 1082.0
offset_bottom = 354.0

[node name="CallButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Call"

[node name="Output" type="RichTextLabel" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Output here"
fit_content = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 97.0
offset_top = 51.0
offset_right = 397.0
offset_bottom = 351.0

[node name="StreamCallButton" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
text = "Stream Call"

[node name="StreamOutput" type="RichTextLabel" parent="Control/VBoxContainer2"]
layout_mode = 2
text = "Srtream Output Here
"
fit_content = true
